dockerfile and authentication
